--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@modelcontextprotocol/sdk": "1.13.1",
 		"agents": "^0.0.100",
+		"openai": "^5.8.2",
 		"zod": "^3.25.67"
 	},
 	"devDependencies": {
